--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <li>
                 <a
                   class="active-link white-text btn blue btn-large modal-trigger"
-                  href="#modal1"
+                  href="apply.html"
                   style="border-radius: 30px; color: #ffffff !important;"
                   >REGISTER NOW</a
                 >
